Fixed incompatibility with java 11